<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/modifEltLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:keepScreenOn="false"
    android:keyboardNavigationCluster="false"
    android:nestedScrollingEnabled="false"
    android:scrollbars="vertical">

    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/kanalayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-41dp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:minHeight="@dimen/min_height"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteLayout" />

    <LinearLayout
        android:id="@+id/kanalayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_spinner">

        <TextView
            android:id="@+id/kanaLabel"
            android:layout_width="75dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/kana" />

        <EditText
            android:id="@+id/kana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/kana"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/kanjilayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kanalayout">

        <TextView
            android:id="@+id/kanjiLabel"
            android:layout_width="75dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/kanji" />

        <EditText
            android:id="@+id/kanji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/kanji"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/francaisLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kanjilayout">

        <TextView
            android:id="@+id/francaisLabel"
            android:layout_width="75dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/francais" />

        <EditText
            android:id="@+id/francais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/francais"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/romanjiLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/francaisLayout">

        <TextView
            android:id="@+id/romanjiLabel"
            android:layout_width="75dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/romanji" />

        <EditText
            android:id="@+id/romanji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/romanji"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/noteLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/romanjiLayout">

        <TextView
            android:id="@+id/notesLabel"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/notes" />

        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fallbackLineSpacing="true"
            android:fontFamily="sans-serif-light"
            android:gravity="left"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="3"
            android:nestedScrollingEnabled="true"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>