<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.tabs.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/modif_cat_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:keepScreenOn="false"
        android:keyboardNavigationCluster="false"
        android:nestedScrollingEnabled="false"
        android:scrollbars="vertical">


        <LinearLayout
            android:id="@+id/nomLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="bottom|top"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/categorieLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23000002">

            <TextView
                android:id="@+id/nomLabel"
                android:layout_width="75dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/nom" />

            <EditText
                android:id="@+id/nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/nom"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete"
                android:minHeight="@dimen/min_height"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/categorieLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/select_cat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomLayout">

            <TextView
                android:id="@+id/parentLabel"
                android:layout_width="200dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/parent" />

            <TextView
                android:id="@+id/parent"
                android:layout_width="200dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

        </LinearLayout>

        <Button
            android:id="@+id/select_cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:minHeight="@dimen/min_height"
            android:text="@string/button_select_cat"
            android:textColor="@color/buttonLabel"
            app:layout_constraintBottom_toTopOf="@+id/button_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categorieLayout" />


        <com.google.android.material.tabs.TabItem
            android:id="@+id/Infos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Infos" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Notes" />


        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"
            android:minHeight="@dimen/min_height"
            android:text="@string/button_save"
            android:textColor="@color/buttonLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_cat" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.tabs.TabLayout>